finish notebook agenda

--- a/Django Intro.ipynb
+++ b/Django Intro.ipynb
@@ -42,6 +42,37 @@
     "\n",
     "`pip install django`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alternative install"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I've gone ahead and created a conda environment that should be easier to work with. Download it from slack."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Topics to cover this week"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Django models and databases\n",
+    "- HTTP requests\n",
+    "- Django forms\n",
+    "- Templates in django "
+   ]
   }
  ],
  "metadata": {
