Adding to polls app

--- a/Django Intro.ipynb
+++ b/Django Intro.ipynb
@@ -438,14 +438,16 @@
     "       - Address\n",
     "       - Store_location\n",
     "       - Merchant\n",
-    "           -merchant_id      \n",
+    "           -merchant_id #primary key for this model/table     \n",
     "       -Inventory\n",
     "       -Payment\n",
     "       -Rating\n",
     "       -Marketing\n",
     "       \n",
     "       \n",
-    "  Inside of each of these models, create at least 3 fields(I would encourage you to play around with adding more though)"
+    "  Inside of each of these models, create at least 3 fields(I would encourage you to play around with adding more though)\n",
+    "  \n",
+    " Have this for tomorrow morning's discussion/lecture"
    ]
   }
  ],
